--- a/Slide/2022/01.Sinyal/01.Sinyal.tex
+++ b/Slide/2022/01.Sinyal/01.Sinyal.tex
@@ -224,10 +224,10 @@
 	\end{figure}
 \end{frame}
 
-\section{Bahan Bacaan Mandiri}
+\section{Tugas Mandiri}
 
 \begin{frame}
-	\frametitle{Bahan Bacaan Mandiri}
+	\frametitle{Tugas Mandiri}
 	\begin{enumerate}
 		\item Oppenheim, A. V., Willsky, A. S. \& Nawab, S. H., (1997). Signal and Systems, Second Edition. New Jersey: Prentice Hall of India.
 		\begin{itemize}
@@ -235,6 +235,8 @@
 			\item Section 1.3.1, Continuous-time complex exponential and sinusoidal signals, pp. 15-21
 			\item Section 1.3.2, Discrete-time complex exponential and sinusoidal signals, pp. 21-25
 			\item Section 1.3.3, Periodicity properties of discrete-time complex exponentials, pp. 25-30
+			\item Section 2.4.1, The Discrete-time unit step and unit impulse sequences, pp 26-27
+			\item Section 2.3.2, The , pp 26-27
 		\end{itemize}
 	\end{enumerate}
 \end{frame}
