--- a/Slide/2022/03.Konvolusi/03.konvolusi.tex
+++ b/Slide/2022/03.Konvolusi/03.konvolusi.tex
@@ -290,6 +290,14 @@
 \end{frame}
 
 \begin{frame}{Konvolusi Penjumlahan}
+	\begin{align*}
+		y[n] &= \sum\limits_{k = -\infty}^{+\infty}x[k] h[n-k] \\
+			 &= \sum\limits_{k = -\infty}^{+\infty}u[k] \alpha^{n-k}u[n-k] \\
+	\end{align*}
+\end{frame}
+
+
+\begin{frame}{Konvolusi Penjumlahan}
 	\textbf{Play convolution sum animation}
 \end{frame}
 
