--- a/Slide/2022/01.Sinyal/01.Sinyal.tex
+++ b/Slide/2022/01.Sinyal/01.Sinyal.tex
@@ -21,7 +21,7 @@
 \title{Sinyal dan Sistem}
 \subtitle{Sinyal}
 
-\author{Mifta Nur Farid}
+\author{Mifta Nur Farid, S.T., M.T.}
 
 \begin{document}
 
@@ -39,6 +39,13 @@
 	\begin{figure}
 		\centering
 		\includegraphics[height=0.7\textheight]{img/01.slide_02_01}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Sinyal sinusoidal waktu kontinu}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/01.slide_02_02}
 	\end{figure}
 \end{frame}
 
@@ -106,10 +113,10 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{Sinyal sinusoidal waktu diskret}
+\begin{frame}{Perbandingan sifat antara sinyal sinusoidal waktu kontinu dan waktu diskret}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{img/01.slide_12}
+		\includegraphics[height=0.7\textheight]{img/01.slide_12}
 	\end{figure}
 \end{frame}
 
@@ -117,7 +124,7 @@
 \begin{frame}{Sinyal sinusoidal saat frekuensinya berbeda}
 	\begin{figure}
 		\centering
-		\includegraphics[height=0.8\textheight]{img/01.slide_13}
+		\includegraphics[height=0.7\textheight]{img/01.slide_13}
 	\end{figure}
 \end{frame}
 
@@ -227,7 +234,7 @@
 \section{Tugas Mandiri}
 
 \begin{frame}
-	\frametitle{Tugas Mandiri}
+	\frametitle{Bahan Bacaan Mandiri}
 	\begin{enumerate}
 		\item Oppenheim, A. V., Willsky, A. S. \& Nawab, S. H., (1997). Signal and Systems, Second Edition. New Jersey: Prentice Hall of India.
 		\begin{itemize}
