--- a/Slide/2022/10.deret_fourier_diskrit/10.deret_fourier_diskrit.tex
+++ b/Slide/2022/10.deret_fourier_diskrit/10.deret_fourier_diskrit.tex
@@ -115,7 +115,33 @@
 	\begin{center}
 		\includegraphics[width=\linewidth]{img/img01}
 	\end{center}
-	
+\end{frame}
+
+\begin{frame}{Latihan Soal}
+	\begin{enumerate}
+		\setcounter{enumi}{1}
+		\item Tentukan koefisien Fourier dari sequence periodik $ x[n] $ yang ditunjukkan oleh gambar di bawah ini
+	\end{enumerate}
+	\begin{center}
+		\includegraphics[width=\linewidth]{img/img02}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Latihan Soal}
+	\begin{enumerate}
+		\setcounter{enumi}{2}
+		\item Tentukan koefisien Fourier dari sequence periodik $ x[n] $ yang ditunjukkan oleh gambar di bawah ini
+	\end{enumerate}
+	\begin{center}
+		\includegraphics[width=\linewidth]{img/img03}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Latihan Soal}
+	\begin{enumerate}
+		\setcounter{enumi}{3}
+		\item Tentukan representasi deret Fourier diskrit dari sequence $ x[n] = \cos(\frac{\pi}{4}n)$
+	\end{enumerate}
 \end{frame}
 
 \end{document}
