--- a/Slide/2022/11.transformasi_fourier_diskrit/11.transformasi_fourier_diskrit.tex
+++ b/Slide/2022/11.transformasi_fourier_diskrit/11.transformasi_fourier_diskrit.tex
@@ -164,4 +164,12 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}{Latihan Soal}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img27}
+		\includegraphics[width=\linewidth]{img/img28}
+	\end{figure}
+\end{frame}
+
 \end{document}
