--- a/Slide/2022/11.transformasi_fourier_diskrit/11.transformasi_fourier_diskrit.tex
+++ b/Slide/2022/11.transformasi_fourier_diskrit/11.transformasi_fourier_diskrit.tex
@@ -159,8 +159,7 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=\linewidth]{img/img24}
-		\includegraphics[width=\linewidth]{img/img25}
-		\includegraphics[width=\linewidth]{img/img26}
+		\includegraphics[width=\linewidth]{img/img25}		\includegraphics[width=\linewidth]{img/img26}
 	\end{figure}
 \end{frame}
 
@@ -168,7 +167,6 @@
 	\begin{figure}
 		\centering
 		\includegraphics[width=\linewidth]{img/img27}
-		\includegraphics[width=\linewidth]{img/img28}
 	\end{figure}
 \end{frame}
 
