--- a/Slide/2022/12.transformasi_laplace/12.transformasi_laplace.tex
+++ b/Slide/2022/12.transformasi_laplace/12.transformasi_laplace.tex
@@ -98,4 +98,173 @@
 	\end{figure}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Properties of the ROC}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img11}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the ROC}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img12}
+	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Laplace Transforms of Some Common Signals}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img13}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Laplace Transforms of Some Common Signals}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img14}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Laplace Transforms of Some Common Signals}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img15}
+	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img16}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img17}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img18}
+		\includegraphics[width=\linewidth]{img/img19}
+		\includegraphics[width=\linewidth]{img/img20}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img21}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img22}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img23}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img24}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img25}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img26}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Properties of the Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[height=0.8\textheight]{img/img27}
+	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\frametitle{The Inverse Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img28}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The Inverse Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img29}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The Inverse Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img30}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The Inverse Laplace Transform}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img31}
+	\end{figure}
+\end{frame}
+
+\begin{frame}
+	\frametitle{The System Function}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img32}
+		\includegraphics[width=\linewidth]{img/img33}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The System Function}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img34}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The System Function}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img35}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{The System Function}
+	\begin{figure}
+		\centering
+		\includegraphics[width=\linewidth]{img/img36}
+		\includegraphics[width=\linewidth]{img/img37}
+	\end{figure}
+\end{frame}
 \end{document}
